--- a/requirements.txt
+++ b/requirements.txt
@@ -5,20 +5,28 @@ click==8.1.3
 dnspython==2.3.0
 exceptiongroup==1.1.1
 fastapi==0.97.0
+filelock==3.12.2
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+Jinja2==3.1.2
+libretranslatepy==2.1.1
+lxml==4.9.2
+MarkupSafe==2.1.3
+mpmath==1.3.0
+networkx==3.1
+numpy==1.24.3
+Pillow==9.5.0
 pydantic==1.10.9
 pymongo==4.3.3
 python-dotenv==1.0.0
 PyYAML==6.0
 requests==2.31.0
 sniffio==1.3.0
-starlette==0.27.0
+starlette==0.28.0
 typing_extensions==4.6.3
 urllib3==2.0.3
 uvicorn==0.22.0
 uvloop==0.17.0
 watchfiles==0.19.0
 websockets==11.0.3
-argostranslate==1.8.0
