--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ anyio==3.7.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
+clip @ git+https://github.com/openai/CLIP.git@a9b1bf5920416aaeaec965c25dd9e8f98c864f16
 dnspython==2.3.0
 exceptiongroup==1.1.1
 fastapi==0.97.0
 filelock==3.12.2
+ftfy==6.1.1
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
@@ -21,12 +23,18 @@ pydantic==1.10.9
 pymongo==4.3.3
 python-dotenv==1.0.0
 PyYAML==6.0
+regex==2023.6.3
 requests==2.31.0
 sniffio==1.3.0
 starlette==0.27.0
+sympy==1.12
+torch==2.0.1
+torchvision==0.15.2
+tqdm==4.65.0
 typing_extensions==4.6.3
 urllib3==2.0.3
 uvicorn==0.22.0
 uvloop==0.17.0
 watchfiles==0.19.0
+wcwidth==0.2.6
 websockets==11.0.3
